Add Spawner Gun, update input settings and add Weapon3 to main character

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,6 +81,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="Weapon1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +ActionMappings=(ActionName="Weapon2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
++ActionMappings=(ActionName="Weapon3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +AxisMappings=(AxisName="LookHorizontal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookVertical",Scale=1.000000,Key=MouseY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
