added Dust environment and added sfx to RCP90

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,4 +12,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/GunJam/Core/BP_GameMode.BP_GameMode_C
+EditorStartupMap=/Game/GunJam/Maps/Main.Main
+GameDefaultMap=/Game/GunJam/Maps/Main.Main
 
