Add RichInnerLife gun

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -90,6 +90,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Weapon5",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Five)
 +ActionMappings=(ActionName="SecondaryFire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="SecondaryFire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
++ActionMappings=(ActionName="Weapon6",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
 +AxisMappings=(AxisName="LookHorizontal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
