improve weapon defaults, show gun name when equiped, rework input to use array values and stop reequiping of current weapon

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -91,6 +91,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SecondaryFire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="SecondaryFire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
 +ActionMappings=(ActionName="Weapon6",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
++ActionMappings=(ActionName="Weapon7",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
++ActionMappings=(ActionName="Weapon8",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Eight)
++ActionMappings=(ActionName="Weapon9",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Nine)
 +AxisMappings=(AxisName="LookHorizontal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
