--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,3 +15,17 @@ GlobalDefaultGameMode=/Game/GunJam/Core/BP_GameMode.BP_GameMode_C
 EditorStartupMap=/Game/GunJam/Maps/Main.Main
 GameDefaultMap=/Game/GunJam/Maps/Main.Main
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=614D51F34C4CE974D5DFCDB131D6B80A
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
